// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attach() > attach("") throws error 1`] = `
[TypeError: The provided selector is invalid.
Expects a CSS selector, a Node element, a NodeList or an array.
See: https://github.com/francoischalifour/medium-zoom]
`;

exports[`browser events > closes zoom on click on the overlay 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
  />
</body>
`;

exports[`browser events > does not close on other keys 1`] = `
<body
  class="medium-zoom--opened"
>
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`browser events > opens zoom on click on the image 1`] = `
<body
  class="medium-zoom--opened"
>
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`close() > close() twice does not throw and renders correctly 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
  />
</body>
`;

exports[`close() > close() with \`data-zoom-src\` renders correctly 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
    data-zoom-src="image-hd.jpg"
  />
</body>
`;

exports[`close() > mediumZoom({ template }).close() renders correctly 1`] = `
<body
  class=""
>
  <template />
  <img
    class="medium-zoom-image"
  />
</body>
`;

exports[`close() > mediumZoom(Node).close() renders correctly 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
  />
</body>
`;

exports[`close() > mediumZoom(String).close() renders correctly 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
  />
  <img
    class="medium-zoom-image"
  />
</body>
`;

exports[`detach() > detach() an opened zoom closes the zoom and detaches images 1`] = `
<body
  class=""
>
  <img
    class=""
  />
</body>
`;

exports[`mediumZoom() > mediumZoom(selector) > selector > mediumZoom("") throws 1`] = `
[TypeError: The provided selector is invalid.
Expects a CSS selector, a Node element, a NodeList or an array.
See: https://github.com/francoischalifour/medium-zoom]
`;

exports[`open() > mediumZoom({ container: Node }).open() renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <div />
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`open() > mediumZoom({ container: Object }).open() renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(-Infinity) translate3d(0px, 0px, 0);"
  />
</body>
`;

exports[`open() > mediumZoom({ container: String }).open() renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <div />
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`open() > mediumZoom({ template: Node }).open() renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <template />
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <div
    class="medium-zoom-overlay"
  />
  <div />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`open() > mediumZoom({ template: String }).open() renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <template />
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <div
    class="medium-zoom-overlay"
  />
  <div />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`open() > open() a SVG renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
    src="vector.svg"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    src="vector.svg"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`open() > open() renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <img
    class="medium-zoom-image"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`open() > open() twice does not zoom twice 1`] = `
<body
  class="medium-zoom--opened"
>
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`open() > open() with \`<picture>\` renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <picture>
    <source
      srcset="image-300x200.jpg 300w"
    />
    <img
      class="medium-zoom-image medium-zoom-image--hidden"
    />
  </picture>
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    src="http://localhost/mock-src.png"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`open() > open() with \`data-zoom-src\` renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
    data-zoom-src="image-hd.jpg"
    src="image.jpg"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    data-zoom-src="image-hd.jpg"
    src="image.jpg"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    data-zoom-src="image-hd.jpg"
    src="image-hd.jpg"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`open() > open() with \`srcset\` renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
    src="image.jpg"
    srcset="image-300x200.jpg 300w, image-600x400.jpg 600w, image-800x500.jpg 800w, image-1000x650.jpg 1000w, image-1200x800.jpg 1200w"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    src="image.jpg"
    srcset="image-300x200.jpg 300w, image-600x400.jpg 600w, image-800x500.jpg 800w, image-1000x650.jpg 1000w, image-1200x800.jpg 1200w"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`toggle() > toggle() once renders correctly 1`] = `
<body
  class="medium-zoom--opened"
>
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;

exports[`toggle() > toggle() twice renders correctly > closed 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
  />
</body>
`;

exports[`toggle() > toggle() twice renders correctly > opened 1`] = `
<body
  class="medium-zoom--opened"
>
  <img
    class="medium-zoom-image medium-zoom-image--hidden"
  />
  <div
    class="medium-zoom-overlay"
  />
  <img
    class="medium-zoom-image medium-zoom-image--opened"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px; transform: scale(NaN) translate3d(NaNpx, NaNpx, 0);"
  />
</body>
`;
